compiler/src/test/resources/amyc/execution/failing/MatchError2.grading.amy
object MatchError
  abstract class Foo
  case class Bar() : Foo
  case class Baz(i: Int) : Foo

  Baz(1) match { case Baz(2) => () }
end MatchError
